--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.scalaj</groupId>
+      <artifactId>scalaj-http_2.12</artifactId>
+      <version>2.4.1</version>
+    </dependency>
 
     <!-- Test -->
     <dependency>
