--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
       <artifactId>scalaj-http_2.12</artifactId>
       <version>2.4.1</version>
     </dependency>
+    
+    <dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>
+	</dependency>
 
     <!-- Test -->
     <dependency>
