Changing POM to test the right test

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
           <junitxml>.</junitxml>
           <filereports>TestSuiteReport.txt</filereports>
           <!-- Comma separated list of JUnit test class names to execute -->
-          <jUnitClasses>samples.AppTest</jUnitClasses>
+          <jUnitClasses>GAPY.Test_Basic</jUnitClasses>
         </configuration>
         <executions>
           <execution>
