Test sur le changement de framework de tests

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <version>2.21.0</version>
         <configuration>
           <!-- Tests will be run with scalatest-maven-plugin instead -->
-          <skipTests>true</skipTests>
+          <skipTests>false</skipTests>
         </configuration>
       </plugin>
       <plugin>
