--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ local.properties
 
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
+.cache-tests
 .scala_dependencies
 .worksheet
 
