Test code coverage functionnality with jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,42 @@
         </executions>
       </plugin>
       <plugin>
+      	<groupId>org.jacoco</groupId>
+      	<artifactId>jacoco-maven-plugin</artifactId>
+      	<version>0.8.4</version>
+      	<executions>
+      		<execution>
+      			<id>prepare-agent</id>
+      			<goals>
+      				<goal>prepare-agent</goal>
+      			</goals>
+      		</execution>
+      		<execution>
+      			<id>report</id>
+      			<phase>prepare-package</phase>
+      			<goals>
+      				<goal>report</goal>
+      			</goals>
+      		</execution>
+      		<execution>
+      			<id>post-unit-test</id>
+      			<phase>test</phase>
+      			<goals>
+      				<goal>report</goal>
+      			</goals>
+      			<configuration>
+      				<dataFile>target/jacoco.exec</dataFile>
+      				<outputDirectory>target/my-reports</outputDirectory>
+      			</configuration>
+      		</execution>
+      	</executions>
+      	<configuration>
+      		<systemPropertyVariables>
+      			<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+      		</systemPropertyVariables>
+      	</configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.21.0</version>
