--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 		<artifactId>json-simple</artifactId>
 		<version>1.1.1</version>
 	</dependency>
+	
+	<dependency>
+    	<groupId>com.propensive</groupId>
+    	<artifactId>rapture-io</artifactId>
+    	<version>0.7.2</version>
+	</dependency>
 
     <!-- Test -->
     <dependency>
