--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
     	<artifactId>rapture-io</artifactId>
     	<version>0.7.2</version>
 	</dependency>
+	
+	<dependency>
+  		<groupId>com.decodified</groupId>
+  		<artifactId>scala-ssh_2.12</artifactId>
+  		<version>0.9.0</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+   		<version>1.6.2</version>
+	</dependency>
 
     <!-- Test -->
     <dependency>
